--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<package>
-  <name>roslint</name>
-  <version>0.10.0</version>
+<package format="2">
+  <name>imlint</name>
+  <version>0.11.0</version>
   <description>
-    CMake lint commands for ROS packages.
+    CMake lint commands for Intermodalics packages.
 
     The lint commands perform static checking of Python or C++ source
     code for errors and standards compliance.
@@ -11,12 +11,14 @@
   <license>BSD</license>
   <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
   <maintainer email="ahenning@fetchrobotics.com">Alex Henning</maintainer>
+  <maintainer email="info@intermodalics.eu">Intermodalics.eu</maintainer>
   <author>Mike Purvis</author>
   <author>Jack O'Quin</author>
+  <author>Intermodalics</author>
 
   <url type="website">http://ros.org/wiki/roslint</url>
-  <url type="repository">https://github.com/ros/roslint.git</url>
-  <url type="bugtracker">https://github.com/ros/roslint/issues</url>
+  <url type="repository">https://github.com/Intermodalics/imlint.git</url>
+  <url type="bugtracker">https://github.com/Intermodalics/imlint/issues</url>
 
   <!-- It would be nicer not to require catkin. -->
   <buildtool_depend>catkin</buildtool_depend>
