--- a/tracks.yaml
+++ b/tracks.yaml
@@ -1,15 +1,8 @@
 tracks:
   trusty:
     actions:
-    - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
-      :{vcs_uri} --name :{name} --output-dir :{archive_dir_path}
-    - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
-      --replace
-    - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
-    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
-      -i :{release_inc}
-    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc}
+    - git-bloom-generate -y release --source :{release_tag} -i :{release_inc}
+    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc} --distros trusty
     devel_branch: intermodalics
     name: upstream
     patches: null
