--- a/tracks.yaml
+++ b/tracks.yaml
@@ -2,11 +2,13 @@ tracks:
   trusty:
     actions:
     - git-bloom-generate -y release --source :{release_tag} -i :{release_inc}
-    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc} --distros trusty
+    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc}
+      --distros trusty
     devel_branch: intermodalics
+    last_version: 0.11.0
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:Intermodalics/imlint.git
     release_tag: intermodalics
     ros_distro: indigo
