--- a/tracks.yaml
+++ b/tracks.yaml
@@ -9,7 +9,7 @@ tracks:
     name: upstream
     patches: null
     release_inc: '1'
-    release_repo_url: git@github.com:Intermodalics/imlint.git
+    release_repo_url: git@github.com:Intermodalics/imlint-release.git
     release_tag: intermodalics
     ros_distro: indigo
     vcs_type: git
