--- a/tracks.yaml
+++ b/tracks.yaml
@@ -6,7 +6,28 @@ tracks:
     - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
       --replace
     - git-bloom-generate -y release --source upstream -i :{release_inc}
-    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc} --distros trusty
+    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc}
+      --distros trusty
+    devel_branch: intermodalics
+    last_version: 0.11.0
+    name: upstream
+    patches: null
+    release_inc: '1'
+    release_repo_url: git@github.com:Intermodalics/imlint-release.git
+    release_tag: intermodalics
+    ros_distro: indigo
+    vcs_type: git
+    vcs_uri: git@github.com:Intermodalics/imlint.git
+    version: :{auto}
+  xenial:
+    actions:
+    - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
+      :{vcs_uri} --name :{name} --output-dir :{archive_dir_path}
+    - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
+      --replace
+    - git-bloom-generate -y release --source upstream -i :{release_inc}
+    - git-bloom-generate -y debian --prefix release --match-all -i :{release_inc}
+      --distros trusty
     devel_branch: intermodalics
     last_version: 0.11.0
     name: upstream
